--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <footer>
-        <h1>Magtimus</h1>
+        <h1>Odrack</h1>
         <p>Todos los derechos reservados © 2018</p>
     </footer>
     
