--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <footer>
         <h1>Odrack</h1>
-        <p>Todos los derechos reservados © 2018</p>
+        <p>iiiieeeessssss</p>
     </footer>
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
