--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <img class="logo" src="img/logommo.png" alt="">
+        <img class="logo" src="img/mmo.png" alt="">
     </header>
 
     <nav>
